# micro0

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
micro0/assembler/: assembler.py  test_assembler.py
micro0/emulator/: computer.py  test_cpu.py  test_system.py
micro0/simulator/: components.py  test_components.py
