[project]
name = "micro0"
version = "0.1.0"
description = "Micro0 - A simple processor emulator and assembler"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "myhdl==0.11",
    "parsita==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
